# movie-vault

./: .env  .gitignore  Cargo.toml  README.md  eslint.config.d.ts  eslint.config.js  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  pr-develop.yml  pr-main.yml  pr-release.yml
src/: App.vue  main.rs  main.ts  media_scanner.rs  metadata_extractor.rs  omdb_meta_data.rs  router.ts  sqlite.rs  type.d.ts
src-tauri/: Cargo.toml  diesel.toml  movies.db  schema.sql  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2025-08-22-111618_create_imdbs/: down.sql  up.sql
src-tauri/migrations/2025-08-22-111715_create_medias/: up.sql
src-tauri/migrations/2025-08-22-111826_create_seasons/: up.sql
src-tauri/migrations/2025-08-22-111925_create_episodes/: up.sql
src-tauri/migrations/2025-08-22-111958_create_files/: up.sql
src-tauri/migrations/2025-08-22-112121_create_actors/: down.sql  up.sql
src-tauri/migrations/2025-08-22-112121_create_people/: down.sql  up.sql
src-tauri/migrations/2025-08-22-112234_create_directors/: down.sql  up.sql
src-tauri/migrations/2025-08-22-112323_create_writers/: down.sql  up.sql
src-tauri/migrations/2025-08-22-112453_create_genres/: down.sql  up.sql
src-tauri/migrations/2025-08-22-112532_create_language/: down.sql  up.sql
src-tauri/migrations/2025-08-22-112614_create_countries/: down.sql  up.sql
src-tauri/migrations/2025-08-22-112700_create_tags/: down.sql  up.sql
src-tauri/src/: data_model.rs  db.rs  fetch_imdb.rs  freeimdb.rs  imdbot.rs  lib.rs  main.rs  media_scanner.rs  metadata_extractor.rs  omdb_meta_data.rs  sqlite.rs
src-tauri/src/data_model/: episode.rs  imdb.rs  media.rs  media_file.rs  season.rs  tag.rs
src-tauri/src/db/: diesel_db.rs  moke.rs  sqlite.rs
src-tauri/src/db/diesel_db/: data_models.rs  schema.rs
src-tauri/src/db/sqlite/: data_models.rs  schema.rs
src-tauri/src/fetch_imdb/: freeimdb.rs  imdbot.rs
src-tauri/src/metadata_extractor/: episode.rs  file.rs  imdb.rs  media.rs  media_file.rs  season.rs
src/assets/: style.css
src/component/: AddMediaManual.vue  Animated.vue  AnimatedList.vue  AppNavbar.vue  AutocompleteSelect.vue  FileRow.vue  FilesSection.vue  FilesSectionSkeleton.vue  FilterMovies.vue  LoadingCard.vue  LoadingResult.vue  LoadingView.vue  MediaCard.vue  Modal.vue  MovieCard.vue  MovieHeader.vue  MovieHeaderSkeleton.vue  NotFoundMovies.vue  ResultsInfo.vue  SearchMovie.d.ts  SearchMovie.vue  SettingCategoryCard.vue
src/component/add_media_page/: AddMediaManual.vue  (+1 more)
src/functions/: invoker.ts  theme.ts
src/pages/: AddMediaPage.vue  HomePage.vue  MediaPage.vue  MoviePage.vue  SettingPage.vue
src/stores/: Dirs.ts  Filters.ts  Videos.ts  base.ts  medias.ts
(+22 files in other folders)
