[package]
name = "movie-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
walkdir = "2"
futures = "0.3"
regex = "1"
rayon = "1.9"
either = "1.6"
tempfile = "3.20.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
wiremock = "0.6.4"
